[gd_scene load_steps=12 format=3 uid="uid://nak1oiaog3si"]

[ext_resource type="ArrayMesh" uid="uid://ds6dlfsvec33m" path="res://assets/models/cylinder.obj" id="1"]
[ext_resource type="Script" path="res://addons/navigation_camera/navigation_camera.gd" id="2"]
[ext_resource type="Script" path="res://brush_property_panel.gd" id="3"]
[ext_resource type="Script" path="res://main.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://bgscj5isj15uq" path="res://addons/painter/preview/brush_preview.tscn" id="5"]
[ext_resource type="PackedScene" path="res://addons/painter/preview/stencil_preview.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://duguqkmmg4tol" path="res://addons/property_panel/property_panel.tscn" id="8"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_v6wh7"]
sky_horizon_color = Color(0.629583, 0.652716, 0.6875, 1)
ground_bottom_color = Color(0.133333, 0.156863, 0.2, 1)
ground_horizon_color = Color(0.629583, 0.652716, 0.6875, 1)

[sub_resource type="Sky" id="Sky_74p3c"]
sky_material = SubResource( "ProceduralSkyMaterial_v6wh7" )

[sub_resource type="Environment" id="Environment_kd550"]
background_mode = 2
sky = SubResource( "Sky_74p3c" )
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="1"]
normal_enabled = true
normal_scale = 1.63
ao_enabled = true

[node name="Main" type="Node3D"]
script = ExtResource( "4" )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( "Environment_kd550" )

[node name="BrushPreview" parent="." instance=ExtResource( "5" )]

[node name="PaintableModel" type="MeshInstance3D" parent="."]
material_override = SubResource( "1" )
mesh = ExtResource( "1" )

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.730143, -0.216297, 0.648157, 0, 0.948576, 0.31655, -0.683295, 0.231126, -0.692596, 4.80166, 2.34506, -5.13087)
current = true
script = ExtResource( "2" )

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.516982, 0.855996, 0, -0.855996, -0.516982, 0, 7.64456, 0)
shadow_enabled = true

[node name="SaveButton" type="Button" parent="."]
offset_left = 12.0
offset_top = 10.0
offset_right = 97.0
offset_bottom = 30.0
text = "Save Result"

[node name="MeshOptionButton" type="OptionButton" parent="."]
offset_left = 13.0
offset_top = 47.0
offset_right = 100.0
offset_bottom = 78.0

[node name="SideBar" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -263.0
offset_top = 7.0
offset_right = -14.0
offset_bottom = -6.0

[node name="VBoxContainer" type="VBoxContainer" parent="SideBar"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -5.0

[node name="Title" type="Label" parent="SideBar/VBoxContainer"]
offset_right = 238.0
offset_bottom = 26.0
text = "Brush"

[node name="BrushPropertyPanel" parent="SideBar/VBoxContainer" instance=ExtResource( "8" )]
offset_top = 30.0
offset_right = 238.0
offset_bottom = 581.0
size_flags_vertical = 3
script = ExtResource( "3" )

[node name="StencilPreview" parent="." instance=ExtResource( "6" )]
painter = NodePath("")

[node name="FileDialog" type="FileDialog" parent="."]
access = 2
filters = PackedStringArray("*.png ; PNG Images")

[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="item_selected" from="MeshOptionButton" to="." method="_on_MeshOptionButton_item_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
